--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,8 @@
             "name": "Aleksey Razbakov",
             "email": "ar@kirchbergerknorr.de"
         }
-    ]
+    ],
+    "require": {
+        "magento-hackathon/magento-composer-installer": "*"
+    },
 }
