--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,8 @@
     ],
     "require": {
         "magento-hackathon/magento-composer-installer": "*"
+    },
+    "extra": {
+        "magento-root-dir": "src"
     }
 }
